// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Parser: Should alter table changing column definition with option, first position. 1`] = `
{
  "id": "MAIN",
  "def": [
    {
      "id": "P_DDS",
      "def": {
        "id": "P_ALTER_TABLE",
        "def": {
          "table": "people",
          "specs": [
            {
              "id": "P_ALTER_TABLE_SPECS",
              "def": {
                "spec": {
                  "id": "O_ALTER_TABLE_SPEC",
                  "def": {
                    "action": "changeColumn",
                    "column": "name",
                    "datatype": {
                      "id": "O_DATATYPE",
                      "def": {
                        "id": "O_VARIABLE_STRING_DATATYPE",
                        "def": {
                          "datatype": "varchar",
                          "length": 255
                        }
                      }
                    },
                    "columnDefinition": [
                      {
                        "id": "O_COLUMN_DEFINITION",
                        "def": {
                          "charset": "utf8"
                        }
                      }
                    ],
                    "position": {
                      "after": null
                    }
                  }
                }
              }
            }
          ]
        }
      }
    }
  ]
}
`;

exports[`Parser: Should alter table changing column definition with option, first position. 2`] = `
{
  "id": "MAIN",
  "def": [
    {
      "id": "P_DDS",
      "def": {
        "id": "P_ALTER_TABLE",
        "def": {
          "table": "people",
          "specs": [
            {
              "id": "P_ALTER_TABLE_SPECS",
              "def": {
                "spec": {
                  "id": "O_ALTER_TABLE_SPEC",
                  "def": {
                    "action": "changeColumn",
                    "column": "name",
                    "datatype": {
                      "id": "O_DATATYPE",
                      "def": {
                        "id": "O_VARIABLE_STRING_DATATYPE",
                        "def": {
                          "datatype": "varchar",
                          "length": 255
                        }
                      }
                    },
                    "columnDefinition": [
                      {
                        "id": "O_COLUMN_DEFINITION",
                        "def": {
                          "charset": "utf8"
                        }
                      }
                    ],
                    "position": {
                      "after": null
                    }
                  }
                }
              }
            }
          ]
        }
      }
    }
  ]
}
`;

exports[`Parser: Should alter table changing column definition. 1`] = `
{
  "id": "MAIN",
  "def": [
    {
      "id": "P_DDS",
      "def": {
        "id": "P_ALTER_TABLE",
        "def": {
          "table": "people",
          "specs": [
            {
              "id": "P_ALTER_TABLE_SPECS",
              "def": {
                "spec": {
                  "id": "O_ALTER_TABLE_SPEC",
                  "def": {
                    "action": "changeColumn",
                    "column": "name",
                    "datatype": {
                      "id": "O_DATATYPE",
                      "def": {
                        "id": "O_VARIABLE_STRING_DATATYPE",
                        "def": {
                          "datatype": "varchar",
                          "length": 255
                        }
                      }
                    },
                    "columnDefinition": [],
                    "position": null
                  }
                }
              }
            }
          ]
        }
      }
    }
  ]
}
`;

exports[`Parser: Should alter table changing column definition. 2`] = `
{
  "id": "MAIN",
  "def": [
    {
      "id": "P_DDS",
      "def": {
        "id": "P_ALTER_TABLE",
        "def": {
          "table": "people",
          "specs": [
            {
              "id": "P_ALTER_TABLE_SPECS",
              "def": {
                "spec": {
                  "id": "O_ALTER_TABLE_SPEC",
                  "def": {
                    "action": "changeColumn",
                    "column": "name",
                    "datatype": {
                      "id": "O_DATATYPE",
                      "def": {
                        "id": "O_VARIABLE_STRING_DATATYPE",
                        "def": {
                          "datatype": "varchar",
                          "length": 255
                        }
                      }
                    },
                    "columnDefinition": [],
                    "position": null
                  }
                }
              }
            }
          ]
        }
      }
    }
  ]
}
`;

exports[`Parser: Should alter table changing column name and definition with option, first position. 1`] = `
{
  "id": "MAIN",
  "def": [
    {
      "id": "P_DDS",
      "def": {
        "id": "P_ALTER_TABLE",
        "def": {
          "table": "people",
          "specs": [
            {
              "id": "P_ALTER_TABLE_SPECS",
              "def": {
                "spec": {
                  "id": "O_ALTER_TABLE_SPEC",
                  "def": {
                    "action": "changeColumn",
                    "column": "name",
                    "newName": "fullname",
                    "datatype": {
                      "id": "O_DATATYPE",
                      "def": {
                        "id": "O_VARIABLE_STRING_DATATYPE",
                        "def": {
                          "datatype": "varchar",
                          "length": 255
                        }
                      }
                    },
                    "columnDefinition": [
                      {
                        "id": "O_COLUMN_DEFINITION",
                        "def": {
                          "charset": "utf8"
                        }
                      }
                    ],
                    "position": {
                      "after": null
                    }
                  }
                }
              }
            }
          ]
        }
      }
    }
  ]
}
`;

exports[`Parser: Should alter table changing column name and definition with option, first position. 2`] = `
{
  "id": "MAIN",
  "def": [
    {
      "id": "P_DDS",
      "def": {
        "id": "P_ALTER_TABLE",
        "def": {
          "table": "people",
          "specs": [
            {
              "id": "P_ALTER_TABLE_SPECS",
              "def": {
                "spec": {
                  "id": "O_ALTER_TABLE_SPEC",
                  "def": {
                    "action": "changeColumn",
                    "column": "name",
                    "newName": "fullname",
                    "datatype": {
                      "id": "O_DATATYPE",
                      "def": {
                        "id": "O_VARIABLE_STRING_DATATYPE",
                        "def": {
                          "datatype": "varchar",
                          "length": 255
                        }
                      }
                    },
                    "columnDefinition": [
                      {
                        "id": "O_COLUMN_DEFINITION",
                        "def": {
                          "charset": "utf8"
                        }
                      }
                    ],
                    "position": {
                      "after": null
                    }
                  }
                }
              }
            }
          ]
        }
      }
    }
  ]
}
`;

exports[`Parser: Should alter table changing column name and definition with options and position after another column. 1`] = `
{
  "id": "MAIN",
  "def": [
    {
      "id": "P_DDS",
      "def": {
        "id": "P_ALTER_TABLE",
        "def": {
          "table": "people",
          "specs": [
            {
              "id": "P_ALTER_TABLE_SPECS",
              "def": {
                "spec": {
                  "id": "O_ALTER_TABLE_SPEC",
                  "def": {
                    "action": "changeColumn",
                    "column": "name",
                    "newName": "fullname",
                    "datatype": {
                      "id": "O_DATATYPE",
                      "def": {
                        "id": "O_VARIABLE_STRING_DATATYPE",
                        "def": {
                          "datatype": "varchar",
                          "length": 255
                        }
                      }
                    },
                    "columnDefinition": [
                      {
                        "id": "O_COLUMN_DEFINITION",
                        "def": {
                          "charset": "utf8"
                        }
                      },
                      {
                        "id": "O_COLUMN_DEFINITION",
                        "def": {
                          "default": "John Smith"
                        }
                      }
                    ],
                    "position": {
                      "after": "ssn"
                    }
                  }
                }
              }
            }
          ]
        }
      }
    }
  ]
}
`;

exports[`Parser: Should alter table changing column name and definition with options and position after another column. 2`] = `
{
  "id": "MAIN",
  "def": [
    {
      "id": "P_DDS",
      "def": {
        "id": "P_ALTER_TABLE",
        "def": {
          "table": "people",
          "specs": [
            {
              "id": "P_ALTER_TABLE_SPECS",
              "def": {
                "spec": {
                  "id": "O_ALTER_TABLE_SPEC",
                  "def": {
                    "action": "changeColumn",
                    "column": "name",
                    "newName": "fullname",
                    "datatype": {
                      "id": "O_DATATYPE",
                      "def": {
                        "id": "O_VARIABLE_STRING_DATATYPE",
                        "def": {
                          "datatype": "varchar",
                          "length": 255
                        }
                      }
                    },
                    "columnDefinition": [
                      {
                        "id": "O_COLUMN_DEFINITION",
                        "def": {
                          "charset": "utf8"
                        }
                      },
                      {
                        "id": "O_COLUMN_DEFINITION",
                        "def": {
                          "default": "John Smith"
                        }
                      }
                    ],
                    "position": {
                      "after": "ssn"
                    }
                  }
                }
              }
            }
          ]
        }
      }
    }
  ]
}
`;

exports[`Parser: Should alter table changing column name and definition. 1`] = `
{
  "id": "MAIN",
  "def": [
    {
      "id": "P_DDS",
      "def": {
        "id": "P_ALTER_TABLE",
        "def": {
          "table": "people",
          "specs": [
            {
              "id": "P_ALTER_TABLE_SPECS",
              "def": {
                "spec": {
                  "id": "O_ALTER_TABLE_SPEC",
                  "def": {
                    "action": "changeColumn",
                    "column": "name",
                    "newName": "fullname",
                    "datatype": {
                      "id": "O_DATATYPE",
                      "def": {
                        "id": "O_VARIABLE_STRING_DATATYPE",
                        "def": {
                          "datatype": "varchar",
                          "length": 255
                        }
                      }
                    },
                    "columnDefinition": [],
                    "position": null
                  }
                }
              }
            }
          ]
        }
      }
    }
  ]
}
`;

exports[`Parser: Should alter table changing column name and definition. 2`] = `
{
  "id": "MAIN",
  "def": [
    {
      "id": "P_DDS",
      "def": {
        "id": "P_ALTER_TABLE",
        "def": {
          "table": "people",
          "specs": [
            {
              "id": "P_ALTER_TABLE_SPECS",
              "def": {
                "spec": {
                  "id": "O_ALTER_TABLE_SPEC",
                  "def": {
                    "action": "changeColumn",
                    "column": "name",
                    "newName": "fullname",
                    "datatype": {
                      "id": "O_DATATYPE",
                      "def": {
                        "id": "O_VARIABLE_STRING_DATATYPE",
                        "def": {
                          "datatype": "varchar",
                          "length": 255
                        }
                      }
                    },
                    "columnDefinition": [],
                    "position": null
                  }
                }
              }
            }
          ]
        }
      }
    }
  ]
}
`;

exports[`Parser: Should alter table dropping column. 1`] = `
{
  "id": "MAIN",
  "def": [
    {
      "id": "P_DDS",
      "def": {
        "id": "P_ALTER_TABLE",
        "def": {
          "table": "people",
          "specs": [
            {
              "id": "P_ALTER_TABLE_SPECS",
              "def": {
                "spec": {
                  "id": "O_ALTER_TABLE_SPEC",
                  "def": {
                    "action": "dropColumn",
                    "column": "middle_name"
                  }
                }
              }
            }
          ]
        }
      }
    }
  ]
}
`;

exports[`Parser: Should alter table dropping column. 2`] = `
{
  "id": "MAIN",
  "def": [
    {
      "id": "P_DDS",
      "def": {
        "id": "P_ALTER_TABLE",
        "def": {
          "table": "people",
          "specs": [
            {
              "id": "P_ALTER_TABLE_SPECS",
              "def": {
                "spec": {
                  "id": "O_ALTER_TABLE_SPEC",
                  "def": {
                    "action": "dropColumn",
                    "column": "middle_name"
                  }
                }
              }
            }
          ]
        }
      }
    }
  ]
}
`;

exports[`Parser: Should alter table dropping column. 3`] = `
{
  "id": "MAIN",
  "def": [
    {
      "id": "P_DDS",
      "def": {
        "id": "P_ALTER_TABLE",
        "def": {
          "table": "people",
          "specs": [
            {
              "id": "P_ALTER_TABLE_SPECS",
              "def": {
                "spec": {
                  "id": "O_ALTER_TABLE_SPEC",
                  "def": {
                    "action": "dropColumn",
                    "column": "middle_name"
                  }
                }
              }
            }
          ]
        }
      }
    }
  ]
}
`;

exports[`Parser: Should alter table dropping column. 4`] = `
{
  "id": "MAIN",
  "def": [
    {
      "id": "P_DDS",
      "def": {
        "id": "P_ALTER_TABLE",
        "def": {
          "table": "people",
          "specs": [
            {
              "id": "P_ALTER_TABLE_SPECS",
              "def": {
                "spec": {
                  "id": "O_ALTER_TABLE_SPEC",
                  "def": {
                    "action": "dropColumn",
                    "column": "middle_name"
                  }
                }
              }
            }
          ]
        }
      }
    }
  ]
}
`;

exports[`Parser: Should alter table modifying column definition with options and position after another column. 1`] = `
{
  "id": "MAIN",
  "def": [
    {
      "id": "P_DDS",
      "def": {
        "id": "P_ALTER_TABLE",
        "def": {
          "table": "people",
          "specs": [
            {
              "id": "P_ALTER_TABLE_SPECS",
              "def": {
                "spec": {
                  "id": "O_ALTER_TABLE_SPEC",
                  "def": {
                    "action": "changeColumn",
                    "column": "name",
                    "datatype": {
                      "id": "O_DATATYPE",
                      "def": {
                        "id": "O_VARIABLE_STRING_DATATYPE",
                        "def": {
                          "datatype": "varchar",
                          "length": 255
                        }
                      }
                    },
                    "columnDefinition": [
                      {
                        "id": "O_COLUMN_DEFINITION",
                        "def": {
                          "charset": "utf8"
                        }
                      },
                      {
                        "id": "O_COLUMN_DEFINITION",
                        "def": {
                          "default": "John Smith"
                        }
                      }
                    ],
                    "position": {
                      "after": "ssn"
                    }
                  }
                }
              }
            }
          ]
        }
      }
    }
  ]
}
`;

exports[`Parser: Should alter table modifying column definition with options and position after another column. 2`] = `
{
  "id": "MAIN",
  "def": [
    {
      "id": "P_DDS",
      "def": {
        "id": "P_ALTER_TABLE",
        "def": {
          "table": "people",
          "specs": [
            {
              "id": "P_ALTER_TABLE_SPECS",
              "def": {
                "spec": {
                  "id": "O_ALTER_TABLE_SPEC",
                  "def": {
                    "action": "changeColumn",
                    "column": "name",
                    "datatype": {
                      "id": "O_DATATYPE",
                      "def": {
                        "id": "O_VARIABLE_STRING_DATATYPE",
                        "def": {
                          "datatype": "varchar",
                          "length": 255
                        }
                      }
                    },
                    "columnDefinition": [
                      {
                        "id": "O_COLUMN_DEFINITION",
                        "def": {
                          "charset": "utf8"
                        }
                      },
                      {
                        "id": "O_COLUMN_DEFINITION",
                        "def": {
                          "default": "John Smith"
                        }
                      }
                    ],
                    "position": {
                      "after": "ssn"
                    }
                  }
                }
              }
            }
          ]
        }
      }
    }
  ]
}
`;
